Update Open API descriptions on the routes
