# app/Http/Controllers/ItemController.php
@@ -50,9 +50,8 @@ class ItemController extends Controller
      * @param LengthAwarePaginator $pagination Pagination object
      * @return mixed
      */
-    protected function paginationGetLinks(LengthAwarePaginator $pagination)
+    protected function paginationGetLinks(LengthAwarePaginator $pagination): mixed
     {
-        //todo prev last etc
         return $pagination->links()->elements;
     }
 
@@ -62,13 +61,15 @@ class ItemController extends Controller
      * @param LengthAwarePaginator $pagination Pagination object
      * @return array
      */
-    #[ArrayShape(['total' => "mixed", 'count' => "mixed"])]
+    #[ArrayShape(['total' => "int", 'count' => "int", 'from' => "float|int|null", 'to' => "float|int|null", 'per_page' => "int"])]
     protected function paginationGetMeta(LengthAwarePaginator $pagination): array
     {
-        //todo prev last etc
         return [
             'total' => $pagination->total(),
             'count' => $pagination->count(),
+            'from' => $pagination->firstItem(),
+            'to' => $pagination->lastItem(),
+            'per_page' => $pagination->perPage(),
         ];
     }
 
@@ -77,10 +78,38 @@ class ItemController extends Controller
      * Get items list, full or search.
      * If there is a filled 'q' parameter then search, and return search result.
      *
+     * @OA\Get(
+     *     path="/api/items",
+     *     summary="Get items",
+     *     tags={"Items"},
+     *     description="Returns items from phonebook all or by query",
+     *     security={{"apiToken": {"read:items"}}},
+     *     @OA\Parameter(
+     *          name="q",
+     *          description="Query text",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="page",
+     *          description="Page number",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response=401, description="Unauthorized"),
+     *     @OA\Response(response=422, description="Item get error"),
+     * )
      * @param Request $request
      * @return JsonResponse
      */
-    public function list(Request $request): JsonResponse
+    public function index(Request $request): JsonResponse
     {
         try {
 
@@ -92,11 +121,10 @@ class ItemController extends Controller
 
             return response()
                 ->json([
-                    'message' => 'Items list get',
+                    'message' => 'Success',
                     'data' => $pagination->items(),
                     'links' => $this->paginationGetLinks($pagination),
                     'meta' => $this->paginationGetMeta($pagination),
-                    'full' => $pagination, //todo del
                 ])
                 ->setStatusCode(Response::HTTP_OK);
 
@@ -114,7 +142,7 @@ class ItemController extends Controller
 
             return response()
                 ->json([
-                    'message' => 'Items list get error',
+                    'message' => 'Items get error',
                     'data' => [],
                     'errors' => [$e->getMessage()],
                 ])
@@ -140,7 +168,7 @@ class ItemController extends Controller
      *              type="integer"
      *          )
      *      ),
-     *     @OA\Response(response="200", description="Item successfully got"),
+     *     @OA\Response(response="200", description="Success"),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Item not found"),
      *     @OA\Response(response=422, description="Item get error"),
@@ -148,13 +176,13 @@ class ItemController extends Controller
      * @param string $id Item id
      * @return JsonResponse
      */
-    public function get(string $id = ''): JsonResponse
+    public function show(string $id = ''): JsonResponse
     {
         try {
 
             return response()
                 ->json([
-                    'message' => 'Item successfully got',
+                    'message' => 'Success',
                     'data' => $this->itemService->getById($id),
                 ])
                 ->setStatusCode(Response::HTTP_OK);
@@ -185,17 +213,71 @@ class ItemController extends Controller
     /**
      * Create new item.
      *
-     *
+     * @OA\Post(
+     *     path="/api/items",
+     *     summary="Create item",
+     *     tags={"Items"},
+     *     description="Create item in phonebook",
+     *     security={{"apiToken": {"write:items"}}},
+     *     @OA\Parameter(
+     *          name="first_name",
+     *          description="Item first name",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="last_name",
+     *          description="Item last name",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="phone_number",
+     *          description="Item uniq phone number",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="country_code",
+     *          description="Item country code",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="timezone_name",
+     *          description="Item timezone",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response=401, description="Unauthorized"),
+     *     @OA\Response(response=422, description="Item create error"),
+     * )
      * @param Request $request Input data
      * @return JsonResponse
      */
-    public function create(Request $request): JsonResponse
+    public function store(Request $request): JsonResponse
     {
         try {
 
             return response()
                 ->json([
-                    'message' => 'Item successfully created',
+                    'message' => 'Success',
                     'data' => $this->itemService->create($request),
                 ])
                 ->setStatusCode(Response::HTTP_CREATED);
@@ -215,6 +297,71 @@ class ItemController extends Controller
     /**
      * Update item by id.
      *
+     * @OA\Patch(
+     *     path="/api/items/{id}",
+     *     summary="Update item by id",
+     *     tags={"Items"},
+     *     description="Update item in phonebook",
+     *     security={{"apiToken": {"read:items"}}},
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Item id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="first_name",
+     *          description="Item first name",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="last_name",
+     *          description="Item last name",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="phone_number",
+     *          description="Item uniq phone number",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="country_code",
+     *          description="Item country code",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="timezone_name",
+     *          description="Item timezone",
+     *          required=false,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response=401, description="Unauthorized"),
+     *     @OA\Response(response=404, description="Item not found"),
+     *     @OA\Response(response=422, description="Item update error"),
+     * )
      * @param Request $request Input data
      * @param string  $id      Item id
      * @return JsonResponse
@@ -225,7 +372,7 @@ class ItemController extends Controller
 
             return response()
                 ->json([
-                    'message' => 'Item successfully updated',
+                    'message' => 'Success',
                     'data' => $this->itemService->updateById($request, $id),
                 ])
                 ->setStatusCode(Response::HTTP_OK);
@@ -255,16 +402,36 @@ class ItemController extends Controller
     /**
      * Delete item by id.
      *
-     * @param string $id Utem id
+     * @OA\Delete(
+     *     path="/api/items/{id}",
+     *     summary="Delete item by id",
+     *     tags={"Items"},
+     *     description="Delete item from phonebook",
+     *     security={{"apiToken": {"read:items"}}},
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Item id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response=401, description="Unauthorized"),
+     *     @OA\Response(response=404, description="Item not found"),
+     *     @OA\Response(response=422, description="Item delete error"),
+     * )
+     * @param string $id Item id
      * @return JsonResponse
      */
-    public function delete(string $id = ''): JsonResponse
+    public function destroy(string $id = ''): JsonResponse
     {
         try {
 
             return response()
                 ->json([
-                    'message' => 'Item successfully deleted',
+                    'message' => 'Success',
                     'data' => $this->itemService->deleteById($id),
                 ])
                 ->setStatusCode(Response::HTTP_OK);
