# storage/api-docs/api-docs.json
@@ -15,6 +15,127 @@
         }
     ],
     "paths": {
+        "/api/items": {
+            "get": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Get items",
+                "description": "Returns items from phonebook all or by query",
+                "operationId": "App\\Http\\Controllers\\ItemController::index",
+                "parameters": [
+                    {
+                        "name": "q",
+                        "in": "path",
+                        "description": "Query text",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "path",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Item get error"
+                    }
+                },
+                "security": [
+                    {
+                        "apiToken": [
+                            "read:items"
+                        ]
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Create item",
+                "description": "Create item in phonebook",
+                "operationId": "App\\Http\\Controllers\\ItemController::store",
+                "parameters": [
+                    {
+                        "name": "first_name",
+                        "in": "path",
+                        "description": "Item first name",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "last_name",
+                        "in": "path",
+                        "description": "Item last name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "phone_number",
+                        "in": "path",
+                        "description": "Item uniq phone number",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "country_code",
+                        "in": "path",
+                        "description": "Item country code",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "timezone_name",
+                        "in": "path",
+                        "description": "Item timezone",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Item create error"
+                    }
+                },
+                "security": [
+                    {
+                        "apiToken": [
+                            "write:items"
+                        ]
+                    }
+                ]
+            }
+        },
         "/api/items/{id}": {
             "get": {
                 "tags": [
@@ -22,7 +143,7 @@
                 ],
                 "summary": "Get item by id",
                 "description": "Returns item from phonebook",
-                "operationId": "App\\Http\\Controllers\\ItemController::get",
+                "operationId": "App\\Http\\Controllers\\ItemController::show",
                 "parameters": [
                     {
                         "name": "id",
@@ -36,7 +157,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Item successfully got"
+                        "description": "Success"
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -46,6 +167,131 @@
                     },
                     "422": {
                         "description": "Item get error"
+                    }
+                },
+                "security": [
+                    {
+                        "apiToken": [
+                            "read:items"
+                        ]
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Delete item by id",
+                "description": "Delete item from phonebook",
+                "operationId": "App\\Http\\Controllers\\ItemController::destroy",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Item id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Item not found"
+                    },
+                    "422": {
+                        "description": "Item delete error"
+                    }
+                },
+                "security": [
+                    {
+                        "apiToken": [
+                            "read:items"
+                        ]
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Update item by id",
+                "description": "Update item in phonebook",
+                "operationId": "App\\Http\\Controllers\\ItemController::update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Item id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "first_name",
+                        "in": "path",
+                        "description": "Item first name",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "last_name",
+                        "in": "path",
+                        "description": "Item last name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "phone_number",
+                        "in": "path",
+                        "description": "Item uniq phone number",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "country_code",
+                        "in": "path",
+                        "description": "Item country code",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "timezone_name",
+                        "in": "path",
+                        "description": "Item timezone",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Item not found"
+                    },
+                    "422": {
+                        "description": "Item update error"
                     }
                 },
                 "security": [
